tests/neg/forwardCompat-export/Test_r3.0.scala
object A:
  export CanEqual.canEqualOption // error

object B:
  export CanEqual.given // error
